# CudaSparseMaxCutPlanted

./: CMakeLists.txt  CudaMaxCutPlanted.sln  README.md
.github/workflows/: cmake-multi-platform.yml
CudaMaxCutPlanted/: CMakeLists.txt  CudaMaxCutPlanted.vcxproj  CudaMaxCutPlanted.vcxproj.filters  CudaSparseMatrix.cu  CudaSparseMatrix.hpp  Kernels.cu  Kernels.cuh  SparseMatrixSumKernel.cu  SparseMatrixSumKernel.cuh  device_properties.cu  device_properties.cuh  kernel.cu  main.cu
